# supervisor

src/my_robot_controller/: package.xml  setup.py
src/my_robot_controller/launch/: hazem_launch.py  salma_launch.py
src/my_robot_controller/my_robot_controller/: hazem_node.py  salma_node.py
src/supervisor25gedid/supervisor25/ros2_ws/src/: launch_modules.sh
src/supervisor25gedid/supervisor25/ros2_ws/src/asurt_msgs/: CMakeLists.txt
src/supervisor25gedid/supervisor25/ros2_ws/src/asurt_msgs/msg/: CMakeLists.txt  package.xml
src/supervisor25gedid/supervisor25/ros2_ws/src/hellocm_cmnode/: CMakeLists.txt  package.xml
src/supervisor25gedid/supervisor25/ros2_ws/src/hellocm_cmnode/launch/: ads-dv_rviz2.launch.py
src/supervisor25gedid/supervisor25/ros2_ws/src/hellocm_cmnode/src/: CMNode_ROS2_HelloCM.cpp  CMNode_ROS2_HelloCM.hpp
src/supervisor25gedid/supervisor25/ros2_ws/src/integration/: package.xml  setup.py
src/supervisor25gedid/supervisor25/ros2_ws/src/ipg_bridge_ros2/: CMakeLists.txt  package.xml
src/supervisor25gedid/supervisor25/ros2_ws/src/kinematic_bicycle_adaptive/: package.xml  setup.py
src/supervisor25gedid/supervisor25/ros2_ws/src/path_csv/: ipg_track_newww.csv  package.xml  setup.cfg  setup.py
src/supervisor25gedid/supervisor25/ros2_ws/src/planning_acceleration/: package.xml  setup.py
src/supervisor25gedid/supervisor25/ros2_ws/src/py_pubsub/: package.xml  setup.py
src/supervisor25gedid/supervisor25/ros2_ws/src/simple_pure_pursuit/: setup.py
src/supervisor25gedid/supervisor25/ros2_ws/src/supervisor/: setup.py
(+38 files in other folders)
